# suoops-backend

./: .env.development.example  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .vercelignore  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  IMPLEMENTATION_SUMMARY_ITEMS_1_4.md  NAMECHEAP_QUICK_REFERENCE.txt  OAUTH_DEPLOYMENT_GUIDE.md  OAUTH_DEPLOYMENT_SUCCESS.md  OCR_FRONTEND_SUMMARY.md  Procfile  README.md  ROADMAP.md  SECURITY-COMPLIANCE.md  SES_DNS_QUICK_REFERENCE.txt  TERMII_QUICK_REFERENCE.txt  VERCEL_QUICK_REFERENCE.txt  WHATSAPP_BOT_BEFORE_AFTER.md  alembic.ini  app.json  deploy.sh  index.html  landing.html  pyproject.toml  pytest.ini  release.sh  render.yaml  requirements-dev.txt  requirements.txt  sla.html  test-production.sh  test_domain.sh  test_email.py  test_email_extraction.py  (+10 more)
.githooks/: pre-push
alembic/: README  env.py
app/: metrics.py
certs/: heroku-redis-ca-chain.pem  heroku-redis-ca.pem
deploy/: docker-compose.yaml  prometheus.yml
docs/: ACCESS_CONTROL_POLICY.md  ANALYTICS_DASHBOARD_IMPLEMENTATION.md  ASYNC_PDF_GENERATION.md  AWS_SETUP_SUOOPS.md  BACKUP_AND_RECOVERY.md  BREVO_SMS_SETUP.md  CONFIGURATION_AUDIT.md  DATA_RETENTION_POLICY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY_v95.md  DNS_CONFIGURATION.md  DPIA.md  EMAIL_QUICK_REFERENCE.md  EMAIL_SETUP_COMPLETE.md  ENVIRONMENT_MANAGEMENT.md  EXPENSE_TRACKING_FEATURE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ITEMS_1_3.md  IMPLEMENTATION_SUMMARY_ITEMS_1_4.md  INCIDENT_RESPONSE_PLAN.md  INFRASTRUCTURE.md  LANDING_PAGE_CORRECTIONS.md  LANDING_PAGE_FEATURES_SUMMARY.md  MIGRATION_COMPLETE.md  README.md  (+97 more)
(+497 files in other folders)
